split cordova specific code

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ npm-debug.log
 example/SampleApp/platforms
 example/SampleApp/plugins
 node_modules/
+
+# Xcode
+xcuserdata
+project.xcworkspace
+ios/CordovaLib
